--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,15 @@ sentence-transformers
 faiss-cpu
 openai
 huggingface-hub
+
+# Core dependencies
+pydantic>=2.0
+anthropic>=0.25.0
+openai>=1.0.0
+requests>=2.31.0
+pandas>=2.0.0
+
+# Optional but recommended
+python-dotenv>=1.0.0
+pytest>=7.4.0
+asyncio>=3.4.3
